[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Aldrich-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Lobby/TailCardsManager/TailCardsHolder.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Lobby/Lobby.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.996078, 0.996078, 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.921569, 0.337255, 0.337255, 0.776471 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TailCardsHolder" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 184.0
margin_top = -368.0
margin_right = -176.0
margin_bottom = -192.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="GridContainer" parent="TailCardsHolder"]
anchor_top = 0.182
anchor_right = 1.0
anchor_bottom = 1.318
margin_top = -8.032
margin_bottom = 0.0319824
columns = 6

[node name="StartMatch" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -120.0
margin_right = 112.0
margin_bottom = -56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "Start Match"

[node name="LeaveLobby" type="Button" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 168.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "Leave Lobby"

[connection signal="pressed" from="StartMatch" to="." method="_on_StartMatch_pressed"]
[connection signal="pressed" from="LeaveLobby" to="." method="_on_LeaveLobby_pressed"]
